    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/imageName"
                android:text="Imagem:" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_below="@+id/picImagebutton"
                android:layout_centerHorizontal="true" android:layout_marginLeft="1dp" android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"/>

            <Button android:layout_alignParentTop="true" android:layout_height="wrap_content" android:id="@+id/picImagebutton"
                android:layout_width="fill_parent" android:layout_alignParentLeft="true" android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp" android:layout_marginTop="1dp" android:text="Selecione uma imagem"/>
           <!--
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start OCR"
                android:id="@+id/bstartocr"
                android:onClick="DoStartOCR"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>
                -->


            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pbocrrecognizing"
                android:visibility="gone"
                android:layout_gravity="center" />




    <EditText
        android:id="@+id/descricao"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/descricao"/>
    <EditText
        android:id="@+id/valor"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/valor"/>
    <EditText
        android:id="@+id/estabelecimento"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/estabelecimento"/>
    <!--
    <EditText
        android:id="@+id/categoria"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/categoria"/>

        -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Categoria"
            android:id="@+id/textView5" />

        <Spinner
            android:layout="@dimen/activity_horizontal_margin"
            android:layout_height="fill_parent"
            android:layout_width="match_parent"
            android:id="@+id/categoria"
            android:layout_weight="0.42">

        </Spinner>

    </LinearLayout>

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:id="@+id/datePicker" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/imageView"
                android:visibility="invisible"
                android:layout_weight="0" />



        </LinearLayout>


    </ScrollView>
